iscsid: Update makefile to include ICL_KERNEL_PROXY
iSER driver use the kernel proxy layer so we need
to add that to iscsid compilation.

Signed-off-by: Max Gurtovoy <maxg@mellanox.com>
Signed-off-by: Sagi Grimberg <sagig@mellanox.com>

--- a/usr.sbin/iscsid/Makefile
+++ b/usr.sbin/iscsid/Makefile
@@ -5,10 +5,12 @@ SRCS=		chap.c discovery.c iscsid.c keys.c log.c login.c pdu.c
 CFLAGS+=	-I${.CURDIR}
 CFLAGS+=	-I${.CURDIR}/../../sys/cam
 CFLAGS+=	-I${.CURDIR}/../../sys/dev/iscsi
-#CFLAGS+=	-DICL_KERNEL_PROXY
+CFLAGS+=	-DICL_KERNEL_PROXY
 MAN=		iscsid.8
 
 LIBADD=		crypto util
+
+LDFLAGS+=	-lssl -lutil
 
 WARNS=		6
 
