Makefile: update after rebasing to 11-current r283141
Signed-off-by: Max Gurtovoy <maxg@mellanox.com>
Signed-off-by: Sagi Grimberg <sagig@mellanox.com>

--- a/sys/modules/iscsi/Makefile
+++ b/sys/modules/iscsi/Makefile
@@ -21,6 +21,7 @@ SRCS+=	iser_memory.c
 SRCS+=	iser_verbs.c
 SRCS+=	vnode_if.h
 SRCS+=	opt_inet.h
+SRCS+=	opt_inet6.h
 
 CFLAGS+= -I${.CURDIR}/../../
 CFLAGS+= -I${SYSDIR}/ofed/include
